src/objects/DF_Contact__c.object
<CustomObject>
    <fields>
        <fullName>About_me__c</fullName>
        <label>About me</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Address_updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Address updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Admin_block_from_requesting_info_session__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Admin block from requesting info session</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Age_Now__c</fullName>
        <formula>If (BlankValue(BirthDate__c, TODAY()) = TODAY(), 0, FLOOR((TODAY() - BirthDate__c)/365.2425))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age Now</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attended?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Average_No_of_Champions_Created__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Average No of Champions Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_No_of_Friends_Created__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Average Number of Friends Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BirthDate__c</fullName>
        <label>BirthDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Block_champion_exchange_access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Block champion exchange access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Blocked_due_to_excessive_req_sessions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Automatic block set from having too many open information requests</description>
        <label>Autoblock due to excessive req sessions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCG_Area_Name__c</fullName>
        <label>CCG Area Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCG_Region_Name__c</fullName>
        <label>CCG Region Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Champion_exchange_access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has champion exchange access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Champion_newsletters__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Champion newsletters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City/Town</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clinical_Commissioning_Group__c</fullName>
        <label>Clinical Commissioning Group</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Verefied__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Champion Code has been entered</description>
        <label>Champion Code Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Ext_Id__c</fullName>
        <externalId>true</externalId>
        <label>Contact Ext Id</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <label>Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contacted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contacted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country_Name__c</fullName>
        <label>Country Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Picklist__c</fullName>
        <label>Country Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>England</fullName>
                </value>
                <value>
                    <fullName>Wales</fullName>
                </value>
                <value>
                    <fullName>Northern Ireland</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County_Name__c</fullName>
        <label>County Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_As_Type__c</fullName>
        <description>What type of Friend was this contact originally created as</description>
        <label>Created As Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>API</fullName>
                </value>
                <value>
                    <fullName>Subscriber</fullName>
                </value>
                <value>
                    <fullName>Digital Friend</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Champion</fullName>
                </value>
                <value>
                    <fullName>Community Representative</fullName>
                </value>
                <value>
                    <fullName>Registration</fullName>
                </value>
                <value>
                    <fullName>DF Mailer</fullName>
                </value>
                <value>
                    <fullName>Historical</fullName>
                </value>
                <value>
                    <fullName>Partner Organisation Admin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DF_Contact_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DF Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DF_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DF Region</label>
        <referenceTo>DF_Region__c</referenceTo>
        <relationshipLabel>DF Champions</relationshipLabel>
        <relationshipName>DF_Champions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Loader__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Loader</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_of_Champion_Training__c</fullName>
        <label>Date of Champion Training</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Digital_Friend_Signup_Time__c</fullName>
        <description>The date the DF Contact became a Digital Friend. This is the date the contact watched the video to 
4 mins and 10 seconds.</description>
        <inlineHelpText>When did the DF Contact watch the Video</inlineHelpText>
        <label>Digital Friend Signup Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>District_Name__c</fullName>
        <label>District Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eligible?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <externalId>true</externalId>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Ethnic_Group__c</fullName>
        <label>Ethnic Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Arab</fullName>
                </value>
                <value>
                    <fullName>Asian – Any other background</fullName>
                </value>
                <value>
                    <fullName>Asian – Bangladeshi</fullName>
                </value>
                <value>
                    <fullName>Asian – Chinese</fullName>
                </value>
                <value>
                    <fullName>Asian – Indian</fullName>
                </value>
                <value>
                    <fullName>Asian – Pakistani</fullName>
                </value>
                <value>
                    <fullName>Black – African</fullName>
                </value>
                <value>
                    <fullName>Black – Any other background</fullName>
                </value>
                <value>
                    <fullName>Black – Caribbean</fullName>
                </value>
                <value>
                    <fullName>Mixed – Any other background</fullName>
                </value>
                <value>
                    <fullName>Mixed - White and Asian</fullName>
                </value>
                <value>
                    <fullName>Mixed – White and Black African</fullName>
                </value>
                <value>
                    <fullName>Mixed – White and Black Caribbean</fullName>
                </value>
                <value>
                    <fullName>Not disclosed</fullName>
                </value>
                <value>
                    <fullName>Other – Any other ethnic group</fullName>
                </value>
                <value>
                    <fullName>White – Any other background</fullName>
                </value>
                <value>
                    <fullName>White – British (English/Welsh/Scottish/Northern Irish)</fullName>
                </value>
                <value>
                    <fullName>White – Gypsy or Irish Traveller</fullName>
                </value>
                <value>
                    <fullName>White - Irish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FacebookId__c</fullName>
        <label>FacebookId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>45</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Football_Team__c</fullName>
        <label>Football Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Football_Teams</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Government_Office_Name__c</fullName>
        <label>Government Office Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Watched_Video__c</fullName>
        <formula>!ISBLANK(Digital_Friend_Signup_Time__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Watched Video</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_exchange_moderator_access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has exchange moderator access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Info_Session_Search_Radius__c</fullName>
        <defaultValue>25</defaultValue>
        <inlineHelpText>This is the radius that appears in a champion&apos;s community detail page</inlineHelpText>
        <label>Info Session Search Radius</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interests__c</fullName>
        <label>Interests</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Audience: Children</fullName>
                </value>
                <value>
                    <fullName>Audience: Young adults</fullName>
                </value>
                <value>
                    <fullName>Audience: Large groups</fullName>
                </value>
                <value>
                    <fullName>Audience: Black, Asian and minority ethnic communities</fullName>
                </value>
                <value>
                    <fullName>Audience: Adults with a learning disability</fullName>
                </value>
                <value>
                    <fullName>Audience: D/deaf</fullName>
                </value>
                <value>
                    <fullName>Audience: Adults with a visual impairment</fullName>
                </value>
                <value>
                    <fullName>Languages: BSL</fullName>
                </value>
                <value>
                    <fullName>Languages: Other</fullName>
                </value>
                <value>
                    <fullName>Languages: Welsh</fullName>
                </value>
                <value>
                    <fullName>Sector: Health &amp; social care</fullName>
                </value>
                <value>
                    <fullName>Sector: Retail</fullName>
                </value>
                <value>
                    <fullName>Sector: Finance</fullName>
                </value>
                <value>
                    <fullName>Sector: Leisure &amp; tourism</fullName>
                </value>
                <value>
                    <fullName>Sector: Housing</fullName>
                </value>
                <value>
                    <fullName>Sector: Utilities</fullName>
                </value>
                <value>
                    <fullName>Sector: Transport</fullName>
                </value>
                <value>
                    <fullName>Sector: Faith groups</fullName>
                </value>
                <value>
                    <fullName>Skills: Promotion</fullName>
                </value>
                <value>
                    <fullName>Skills: Working with the press</fullName>
                </value>
                <value>
                    <fullName>Skills: IT</fullName>
                </value>
                <value>
                    <fullName>Skills: Social media</fullName>
                </value>
                <value>
                    <fullName>Other: Local Dementia Friendly Community</fullName>
                </value>
                <value>
                    <fullName>Other: Rural communities</fullName>
                </value>
                <value>
                    <fullName>Other: Events</fullName>
                </value>
                <value>
                    <fullName>Other: Campaining</fullName>
                </value>
                <value>
                    <fullName>Other: Volunteering</fullName>
                </value>
                <value>
                    <fullName>Other: Fundraising</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_18_or_over__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is 18 or over</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Geo_Located__c</fullName>
        <description>Used primarily for filtering on SOQL queries because Location__c cannot be used as a filter in SOQL</description>
        <formula>NOT(ISBLANK(Location__c))</formula>
        <label>Is Geo Located</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LSOA_Name__c</fullName>
        <label>LSOA Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>45</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Friends_Session_Date__c</fullName>
        <label>Latest Friends Session Date</label>
        <summarizedField>DF_Event__c.Event_Date_Time__c</summarizedField>
        <summaryFilterItems>
            <field>DF_Event__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dementia Friend Information Session</value>
        </summaryFilterItems>
        <summaryForeignKey>DF_Event__c.Session_Organiser__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lea_Name__c</fullName>
        <label>Lea Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Refresh__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legacy Refresh</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lives_in_England__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lives in England?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>MSOA_Name__c</fullName>
        <label>MSOA Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailer_type__c</fullName>
        <label>Mailer type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Returned_Mailer__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DEMFRND14</fullName>
                </value>
                <value>
                    <fullName>DEMFRND15</fullName>
                </value>
                <value>
                    <fullName>DEMFRND16</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Make_Pledge_Public__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Make Pledge Public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>Last_Name__c &amp; &quot;,  &quot; &amp; First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Forum_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>National Forum Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Newsletters__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Newsletters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Info_Sessions_Requested__c</fullName>
        <label>No. Info Sessions Requested</label>
        <summaryFilterItems>
            <field>DF_Event__c.Requested_Info_Session__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>DF_Event__c.Request_Status__c</field>
            <operation>equals</operation>
            <value>Open - waiting for champion</value>
        </summaryFilterItems>
        <summaryForeignKey>DF_Event__c.Session_Organiser__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Num_open_info_sessions_requested__c</fullName>
        <description>We wish to limit the number of open info sessions that can be concurrently requested to 10</description>
        <inlineHelpText>We wish to limit the number of open info sessions that can be concurrently requested to 10</inlineHelpText>
        <label>Num open info sessions requested</label>
        <summaryFilterItems>
            <field>DF_Event__c.Requested_Info_Session__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>DF_Event__c.Request_Status__c</field>
            <operation>equals</operation>
            <value>Waiting for approval, Open - waiting for champion, Matched with champion</value>
        </summaryFilterItems>
        <summaryForeignKey>DF_Event__c.Session_Organiser__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Friends_Influenced__c</fullName>
        <label>Number of Friends Influenced</label>
        <summarizedField>DF_Event__c.Number_of_Attendees__c</summarizedField>
        <summaryForeignKey>DF_Event__c.Session_Organiser__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Private_Sessions_Run__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Private Sessions Run</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Public_Sessions_Run__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Public Sessions Run</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Interests__c</fullName>
        <label>Other Interests</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Organisation_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Organisation ID</label>
        <referenceTo>Partner_Organisation__c</referenceTo>
        <relationshipLabel>DF Champions</relationshipLabel>
        <relationshipName>DF_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pledge_Name__c</fullName>
        <label>Pledge Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Portal_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portal Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>DF Contacts</relationshipLabel>
        <relationshipName>DF_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Portal_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portal User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DF_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Postcode_Sector__c</fullName>
        <formula>TRIM(LEFT(Postcode__c,FIND(&quot; &quot;, Postcode__c)-1))</formula>
        <label>Postcode Sector</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postcode_Ward__c</fullName>
        <label>Postcode Ward</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <label>Postcode</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Care_Trust__c</fullName>
        <label>Primary Care Trust</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reciprocal_DFContact_Id__c</fullName>
        <formula>IF(Portal_Contact__r.DF_Contact__c = LEFT(Id,15), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reciprocal DFContact Id</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecordType_Name__c</fullName>
        <formula>$RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordType Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <description>Use by DF - progress integration</description>
        <label>Record Type Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Forum_Member__c</fullName>
        <label>Regional Forum Member</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>London Forum</fullName>
                </value>
                <value>
                    <fullName>South Forum</fullName>
                </value>
                <value>
                    <fullName>Midlands Forum</fullName>
                </value>
                <value>
                    <fullName>North Forum</fullName>
                </value>
                <value>
                    <fullName>Wales Forum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regional_Support_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Support Officer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>DF_Contact__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>RSO</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>DF_Contact__c</referenceTo>
        <relationshipLabel>DF Contacts</relationshipLabel>
        <relationshipName>DF_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Registered_Events_Count__c</fullName>
        <label>Registered Events Count</label>
        <summaryForeignKey>DF_EventAttendee__c.DF_Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Returned_Mailer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Returned Mailer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Selected_to_receive_message__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selected to receive message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Session_Code_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The friend Code has been verified</description>
        <label>Friend Code Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospective</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Converted</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>On Hiatus/Resting</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategic_Health_Authority__c</fullName>
        <label>Strategic Health Authority</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_No_of_Available_Info_Sessions__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total No of Available Info Sessions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_No_of_Cancelled_Info_Sessions__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total No of Cancelled Info Sessions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_No_of_Champions_Created__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total No of Champions Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_No_of_Completed_Info_Sessions__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total No of Completed Info Sessions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_No_of_Friends_Created__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Number of Friends Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_No_of_Full_Sessions__c</fullName>
        <label>Total No of Full Sessions</label>
        <summaryFilterItems>
            <field>DF_Event__c.Event_Status__c</field>
            <operation>equals</operation>
            <value>Full</value>
        </summaryFilterItems>
        <summaryForeignKey>DF_Event__c.Session_Organiser__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Trainer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trainer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Dementia Friend Champion, RSO</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>DF_Contact__c</referenceTo>
        <relationshipLabel>DF Contacts (Trainer)</relationshipLabel>
        <relationshipName>Trainer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type_of_Champion__c</fullName>
        <label>Type of Champion</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Super Champion</fullName>
                </value>
                <value>
                    <fullName>Welsh Champion</fullName>
                </value>
                <value>
                    <fullName>Staff Champion</fullName>
                </value>
                <value>
                    <fullName>Scouts</fullName>
                </value>
                <value>
                    <fullName>Young Persons Champion</fullName>
                </value>
                <value>
                    <fullName>Digital Champion</fullName>
                </value>
                <value>
                    <fullName>PR Champion</fullName>
                </value>
                <value>
                    <fullName>Children’s Champion</fullName>
                </value>
                <value>
                    <fullName>Fast tracked</fullName>
                </value>
                <value>
                    <fullName>Pilot</fullName>
                </value>
                <value>
                    <fullName>Mentor Champion</fullName>
                </value>
                <value>
                    <fullName>VIP</fullName>
                </value>
                <value>
                    <fullName>Type 3</fullName>
                </value>
                <value>
                    <fullName>Type 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_opted_out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User opted out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Watched_video_type__c</fullName>
        <label>Watched video type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BSL</fullName>
                </value>
                <value>
                    <fullName>Standard Video</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Westminister_Constituency__c</fullName>
        <label>Westminister Constituency</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Why_do_you_want_to_become_a_Champion__c</fullName>
        <label>Why do you want to become a Champion?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>isVerifyEmailNotSent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>created to indicate people who hasn&apos;t received verify email on 21/07/2016</description>
        <label>isVerifyEmailNotSent</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>